# satview

./: README.md
satview/: Cargo.toml
satview/common/: tle.txt  tle2.txt  tle3.txt
satview/deprecated_src/: coord_systems.rs  main.rs  observer.rs  satellite_dep.rs  satutil.rs
satview/src/: lcp.json  main.rs  satutil.rs
satview/src/obs/: observer.rs
satview/src/sat/: satellite.rs
satview/src/utils/: coordinate_systems.rs  mod.rs
